--- a/admin/config.yml
+++ b/admin/config.yml
@@ -17,11 +17,10 @@ collections:
       - { label: "Body", name: "body", widget: "markdown" }
 
   - name: "media"
-    label: "Gallery Uploads"
+    label: "Media Uploads"
     folder: "assets/uploads"
-    media_folder: ""
-    public_folder: ""
     create: true
     slug: "{{slug}}"
     fields:
+      - { label: "Title", name: "title", widget: "string" }
       - { label: "File", name: "file", widget: "file" }
