feat: Add project project

--- a/content/projects.json
+++ b/content/projects.json
@@ -1,1 +1,9 @@
-[]
+[
+  {
+    "id": "1750650587236",
+    "title": "project",
+    "description": "hi this is my logo",
+    "image": "https://raw.githubusercontent.com/Ascendss/MBEngineering-main/main/assets/uploads/1750650584962-37ca41.png",
+    "createdAt": "2025-06-23T03:49:47.236Z"
+  }
+]
