feat: Add project project

--- a/content/projects.json
+++ b/content/projects.json
@@ -5,5 +5,12 @@
     "description": "hi this is my logo",
     "image": "https://raw.githubusercontent.com/Ascendss/MBEngineering-main/main/assets/uploads/1750650584962-37ca41.png",
     "createdAt": "2025-06-23T03:49:47.236Z"
+  },
+  {
+    "id": "1750650587969",
+    "title": "project",
+    "description": "hi this is my logo",
+    "image": "https://raw.githubusercontent.com/Ascendss/MBEngineering-main/main/assets/uploads/1750650586462-37ca41.png",
+    "createdAt": "2025-06-23T03:49:47.969Z"
   }
 ]
