feat: Add project y

--- a/content/projects.json
+++ b/content/projects.json
@@ -1,1 +1,9 @@
-[]
+[
+  {
+    "id": "1750651755381",
+    "title": "y",
+    "description": "y",
+    "image": "https://raw.githubusercontent.com/Ascendss/MBEngineering-main/main/assets/uploads/1750651753310-37ca41.png",
+    "createdAt": "2025-06-23T04:09:15.381Z"
+  }
+]
