--- a/package.json
+++ b/package.json
@@ -3,7 +3,5 @@
   "version": "1.0.0",
   "description": "Portfolio website for MB Engineering",
   "scripts": {},
-  "dependencies": {
-    "@octokit/rest": "^22.0.0"
-  }
+  "dependencies": {}
 }
