--- a/content/projects.json
+++ b/content/projects.json
@@ -1,1 +1,9 @@
-[]
+[
+  {
+    "id": "1763840305678",
+    "title": "project",
+    "description": "",
+    "image": "https://raw.githubusercontent.com/Ascendss/MBEngineering-main/main/assets/uploads/1763840304139-74c0df.png",
+    "createdAt": "2025-11-22T19:38:25.678Z"
+  }
+]
