--- a/content/projects.json
+++ b/content/projects.json
@@ -5,5 +5,12 @@
     "description": "",
     "image": "https://raw.githubusercontent.com/Ascendss/MBEngineering-main/main/assets/uploads/1763840304139-74c0df.png",
     "createdAt": "2025-11-22T19:38:25.678Z"
+  },
+  {
+    "id": "1763840660551",
+    "title": "project",
+    "description": "",
+    "image": "https://raw.githubusercontent.com/Ascendss/MBEngineering-main/main/assets/uploads/1763840659731-cbcc61.png",
+    "createdAt": "2025-11-22T19:44:20.551Z"
   }
 ]
