--- a/content/projects.json
+++ b/content/projects.json
@@ -12,5 +12,12 @@
     "description": "",
     "image": "https://raw.githubusercontent.com/Ascendss/MBEngineering-main/main/assets/uploads/1763840659731-cbcc61.png",
     "createdAt": "2025-11-22T19:44:20.551Z"
+  },
+  {
+    "id": "1763842243777",
+    "title": "hi",
+    "description": "",
+    "image": "https://raw.githubusercontent.com/Ascendss/MBEngineering-main/main/assets/uploads/1763842242292-1e8939.png",
+    "createdAt": "2025-11-22T20:10:43.777Z"
   }
 ]
