feat: Add project test 8pm 11/24

--- a/content/projects.json
+++ b/content/projects.json
@@ -19,5 +19,14 @@
     "description": "",
     "image": "https://raw.githubusercontent.com/Ascendss/MBEngineering-main/main/assets/uploads/1763842242292-1e8939.png",
     "createdAt": "2025-11-22T20:10:43.777Z"
+  },
+  {
+    "id": "1764032426715",
+    "title": "test 8pm 11/24",
+    "slug": "test-8pm-11-24-1764032426715",
+    "summary": "",
+    "heroImage": "https://raw.githubusercontent.com/Ascendss/MBEngineering-main/main/assets/uploads/1764032424848-962cb1.jpg",
+    "content": "",
+    "createdAt": "2025-11-25T01:00:26.715Z"
   }
 ]
